2009-03-22  Stefan Jahn  <stefan@lkcc.org>

	* evaluate.cpp: Fixed dB() calculation for real arguments to
	reflect power conversion (10*log10) as in all other computations.

2009-03-14  Stefan Jahn  <stefan@lkcc.org>

	* trsolver.cpp: Allowing time start/stop to be steered by sweep
	variables correctly.

2009-03-07  Stefan Jahn  <stefan@lkcc.org>

	* equation.cpp (getVector): Helper function for environment
	access.

	* environment.cpp: Handling vector values appropriately.

	* check_netlist.cpp: Passing vectors in environment.

2008-11-16  Stefan Jahn  <stefan@lkcc.org>

	* acsolver.cpp: Voltage probe now returns noise voltage data
	properly.

2008-10-26  Stefan Jahn  <stefan@lkcc.org>

	* sweep.cpp: Return 'Values' property content of parent analysis
	for constant sweeps.

	* check_netlist.cpp: Allowing parameter sweep variables or other
	variable in the 'Values' property (when it is marked 'const') of
	simulation boxes.

2008-10-08  Stefan Jahn  <stefan@lkcc.org>

	* compat.h: New file containing system specific #include's and
	#define's.  Changed all callers.

2008-10-07  Stefan Jahn  <stefan@lkcc.org>

	* module.cpp: Added a function which can emit the list of
	registered components as compilable C-code (into the file
	'qucsdefs.h').

	* netdefs.h: Removed limitation of the number of required and
	optional properties a component can have.

2008-10-06  Stefan Jahn  <stefan@lkcc.org>

	* scan_dataset.l: Fixed data identifier syntax (e.g. Versus.0001).

	* check_netlist.cpp: Finally removed any component specific
	checks.  Now everything can be checked by the registered module
	properties.

2008-10-05  Stefan Jahn  <stefan@lkcc.org>

	* check_netlist.cpp: Removed special string validation in
	properties.  Identifier ranges are now stored directly in property
	definitions, thus checking can be done using the component
	specifications.

	* module.cpp: First steps towards modularization.  Changes in all